# athena

./: .gitignore  5G-NR-V2X_DB_Communication_Performance.xlsx  5G-NR-V2X_DB_Communication_Performance_v2_231129.xlsx  README.md  code_convention_rule.md  v2x-doxygen
doc/: V2X_SW_Architecture.xlsx  ~$V2X_SW_Architecture.xlsx
docs/doxygen-html/: annotated.html  app_8c.html  app_8c__incl.map  app_8c__incl.md5  app_8h.html  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  classCallbackHandler-members.html  classCallbackHandler.html  classCallbackHandler__coll__graph.md5  classCallbackHandler__inherit__graph.map  classes.html  cli_8c.html  cli_8c__incl.map  cli_8c__incl.md5  cli_8h.html  cli_8h__dep__incl.map  cli_8h__dep__incl.md5  cli_8h__incl.map  cli_8h__incl.md5  cli_8h_source.html  cli__cmd_8c.html  cli__cmd_8c__incl.map  cli__cmd_8c__incl.md5  cli__cp_8c.html  cli__cp_8c__incl.map  cli__cp_8c__incl.md5  cli__cp_8h.html  cli__cp_8h__dep__incl.map  cli__cp_8h__dep__incl.md5  cli__cp_8h_source.html  cli__db_8c.html  cli__db_8c__incl.map  cli__db_8c__incl.md5  cli__db_8h.html  cli__db_8h__dep__incl.map  cli__db_8h__dep__incl.md5  (+447 more)
docs/naming/: 5G-NR-V2X_Naming Rule.xlsx
docs/plan/: 5G-NR-V2X 통신 성능 검증을 위한 DB 수집 일정_v1_240104.xlsx
src/: .gitignore  ReleaseNote.md
src/apps/: .gitignore  Makefile  app-v2x  app.c  athena  main.c
src/drivers/: Makefile  di.c
src/platform/catkin_ws/src/gnss_pose_to_socket/: CMakeLists.txt  package.xml
src/platform/catkin_ws/src/gnss_pose_to_socket/src/: gnss_pose_to_socket.cpp
(+1204 files in other folders)
