<package format="2">
  <name>gnss_pose_to_socket</name>
  <version>0.0.0</version>
  <description>The gnss_pose_to_socket package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>

